Práctica 2/GParser.java
// Generated from GParser.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		KEYWORD_FUNCTION=1, KEYWORD_BEGIN=2, KEYWORD_END=3, KEYWORD_WHILE=4, KEYWORD_INCLUDE=5, 
		TRUE=6, FALSE=7, VOID=8, NUMERO=9, CADENA=10, ENTERO=11, FLOTANTE=12, 
		IDENTIFICADOR=13, PI=14, PD=15, FIN=16, COMA=17, DOS_PUNTOS=18, ASIGNACION=19, 
		MENOR_QUE=20, MAYOR_QUE=21, IGUAL_QUE=22, DISTINTO_QUE=23, SUMA=24, COMENTARIO_LINEA=25, 
		COMENTARIO_BLOQUE=26, CADENA_CARACTERES=27, WS=28;
	public static final int
		RULE_prog = 0, RULE_pr_function = 1, RULE_pr_begin = 2, RULE_pr_end = 3, 
		RULE_pr_include = 4, RULE_pr_while = 5, RULE_palabra_reservada = 6, RULE_op_menor = 7, 
		RULE_op_mayor = 8, RULE_op_igual = 9, RULE_op_distinto = 10, RULE_condicion_logica = 11, 
		RULE_comparacion = 12, RULE_operador = 13, RULE_num = 14, RULE_identificador = 15, 
		RULE_fin = 16, RULE_coma = 17, RULE_dos_puntos = 18, RULE_parentesis_izquierdo = 19, 
		RULE_parentesis_derecho = 20, RULE_op_asignacion = 21, RULE_op_suma = 22, 
		RULE_signo_puntuacion = 23, RULE_parametros_bucle = 24, RULE_parametros_DF = 25, 
		RULE_parametros_LF = 26, RULE_parametros = 27, RULE_include = 28, RULE_libreria = 29, 
		RULE_funcion = 30, RULE_cabecerafuncion = 31, RULE_cuerpofuncion = 32, 
		RULE_declaracionfuncion = 33, RULE_llamadafuncion = 34, RULE_nombrefuncion = 35, 
		RULE_tipodedatos = 36, RULE_asignacion = 37, RULE_concatenacion = 38, 
		RULE_bucle = 39, RULE_cabecerawhile = 40, RULE_cuerpowhile = 41, RULE_var = 42;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "pr_function", "pr_begin", "pr_end", "pr_include", "pr_while", 
			"palabra_reservada", "op_menor", "op_mayor", "op_igual", "op_distinto", 
			"condicion_logica", "comparacion", "operador", "num", "identificador", 
			"fin", "coma", "dos_puntos", "parentesis_izquierdo", "parentesis_derecho", 
			"op_asignacion", "op_suma", "signo_puntuacion", "parametros_bucle", "parametros_DF", 
			"parametros_LF", "parametros", "include", "libreria", "funcion", "cabecerafuncion", 
			"cuerpofuncion", "declaracionfuncion", "llamadafuncion", "nombrefuncion", 
			"tipodedatos", "asignacion", "concatenacion", "bucle", "cabecerawhile", 
			"cuerpowhile", "var"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'function'", "'begin'", "'end'", "'while'", "'include'", "'true'", 
			"'false'", "'void'", "'numero'", "'cadena'", null, null, null, "'('", 
			"')'", "';'", "','", "':'", "':='", "'<'", "'>'", "'=='", "'!='", "'+'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "KEYWORD_FUNCTION", "KEYWORD_BEGIN", "KEYWORD_END", "KEYWORD_WHILE", 
			"KEYWORD_INCLUDE", "TRUE", "FALSE", "VOID", "NUMERO", "CADENA", "ENTERO", 
			"FLOTANTE", "IDENTIFICADOR", "PI", "PD", "FIN", "COMA", "DOS_PUNTOS", 
			"ASIGNACION", "MENOR_QUE", "MAYOR_QUE", "IGUAL_QUE", "DISTINTO_QUE", 
			"SUMA", "COMENTARIO_LINEA", "COMENTARIO_BLOQUE", "CADENA_CARACTERES", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public List<IncludeContext> include() {
			return getRuleContexts(IncludeContext.class);
		}
		public IncludeContext include(int i) {
			return getRuleContext(IncludeContext.class,i);
		}
		public List<FuncionContext> funcion() {
			return getRuleContexts(FuncionContext.class);
		}
		public FuncionContext funcion(int i) {
			return getRuleContext(FuncionContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==KEYWORD_INCLUDE) {
				{
				{
				setState(86);
				include();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==KEYWORD_FUNCTION) {
				{
				{
				setState(92);
				funcion();
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_functionContext extends ParserRuleContext {
		public TerminalNode KEYWORD_FUNCTION() { return getToken(GParser.KEYWORD_FUNCTION, 0); }
		public Pr_functionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterPr_function(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitPr_function(this);
		}
	}

	public final Pr_functionContext pr_function() throws RecognitionException {
		Pr_functionContext _localctx = new Pr_functionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_pr_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(KEYWORD_FUNCTION);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_beginContext extends ParserRuleContext {
		public TerminalNode KEYWORD_BEGIN() { return getToken(GParser.KEYWORD_BEGIN, 0); }
		public Pr_beginContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_begin; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterPr_begin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitPr_begin(this);
		}
	}

	public final Pr_beginContext pr_begin() throws RecognitionException {
		Pr_beginContext _localctx = new Pr_beginContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_pr_begin);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(KEYWORD_BEGIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_endContext extends ParserRuleContext {
		public TerminalNode KEYWORD_END() { return getToken(GParser.KEYWORD_END, 0); }
		public Pr_endContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_end; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterPr_end(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitPr_end(this);
		}
	}

	public final Pr_endContext pr_end() throws RecognitionException {
		Pr_endContext _localctx = new Pr_endContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_pr_end);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(KEYWORD_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_includeContext extends ParserRuleContext {
		public TerminalNode KEYWORD_INCLUDE() { return getToken(GParser.KEYWORD_INCLUDE, 0); }
		public Pr_includeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_include; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterPr_include(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitPr_include(this);
		}
	}

	public final Pr_includeContext pr_include() throws RecognitionException {
		Pr_includeContext _localctx = new Pr_includeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_pr_include);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(KEYWORD_INCLUDE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_whileContext extends ParserRuleContext {
		public TerminalNode KEYWORD_WHILE() { return getToken(GParser.KEYWORD_WHILE, 0); }
		public Pr_whileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_while; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterPr_while(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitPr_while(this);
		}
	}

	public final Pr_whileContext pr_while() throws RecognitionException {
		Pr_whileContext _localctx = new Pr_whileContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_pr_while);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(KEYWORD_WHILE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Palabra_reservadaContext extends ParserRuleContext {
		public Pr_functionContext pr_function() {
			return getRuleContext(Pr_functionContext.class,0);
		}
		public Pr_beginContext pr_begin() {
			return getRuleContext(Pr_beginContext.class,0);
		}
		public Pr_endContext pr_end() {
			return getRuleContext(Pr_endContext.class,0);
		}
		public Pr_includeContext pr_include() {
			return getRuleContext(Pr_includeContext.class,0);
		}
		public Pr_whileContext pr_while() {
			return getRuleContext(Pr_whileContext.class,0);
		}
		public Palabra_reservadaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_palabra_reservada; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterPalabra_reservada(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitPalabra_reservada(this);
		}
	}

	public final Palabra_reservadaContext palabra_reservada() throws RecognitionException {
		Palabra_reservadaContext _localctx = new Palabra_reservadaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_palabra_reservada);
		try {
			setState(113);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KEYWORD_FUNCTION:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				pr_function();
				}
				break;
			case KEYWORD_BEGIN:
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				pr_begin();
				}
				break;
			case KEYWORD_END:
				enterOuterAlt(_localctx, 3);
				{
				setState(110);
				pr_end();
				}
				break;
			case KEYWORD_INCLUDE:
				enterOuterAlt(_localctx, 4);
				{
				setState(111);
				pr_include();
				}
				break;
			case KEYWORD_WHILE:
				enterOuterAlt(_localctx, 5);
				{
				setState(112);
				pr_while();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Op_menorContext extends ParserRuleContext {
		public TerminalNode MENOR_QUE() { return getToken(GParser.MENOR_QUE, 0); }
		public Op_menorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_op_menor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterOp_menor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitOp_menor(this);
		}
	}

	public final Op_menorContext op_menor() throws RecognitionException {
		Op_menorContext _localctx = new Op_menorContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_op_menor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(MENOR_QUE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Op_mayorContext extends ParserRuleContext {
		public TerminalNode MAYOR_QUE() { return getToken(GParser.MAYOR_QUE, 0); }
		public Op_mayorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_op_mayor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterOp_mayor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitOp_mayor(this);
		}
	}

	public final Op_mayorContext op_mayor() throws RecognitionException {
		Op_mayorContext _localctx = new Op_mayorContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_op_mayor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(MAYOR_QUE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Op_igualContext extends ParserRuleContext {
		public TerminalNode IGUAL_QUE() { return getToken(GParser.IGUAL_QUE, 0); }
		public Op_igualContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_op_igual; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterOp_igual(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitOp_igual(this);
		}
	}

	public final Op_igualContext op_igual() throws RecognitionException {
		Op_igualContext _localctx = new Op_igualContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_op_igual);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(IGUAL_QUE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Op_distintoContext extends ParserRuleContext {
		public TerminalNode DISTINTO_QUE() { return getToken(GParser.DISTINTO_QUE, 0); }
		public Op_distintoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_op_distinto; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterOp_distinto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitOp_distinto(this);
		}
	}

	public final Op_distintoContext op_distinto() throws RecognitionException {
		Op_distintoContext _localctx = new Op_distintoContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_op_distinto);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(DISTINTO_QUE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Condicion_logicaContext extends ParserRuleContext {
		public TerminalNode TRUE() { return getToken(GParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(GParser.FALSE, 0); }
		public Condicion_logicaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicion_logica; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterCondicion_logica(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitCondicion_logica(this);
		}
	}

	public final Condicion_logicaContext condicion_logica() throws RecognitionException {
		Condicion_logicaContext _localctx = new Condicion_logicaContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_condicion_logica);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_la = _input.LA(1);
			if ( !(_la==TRUE || _la==FALSE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComparacionContext extends ParserRuleContext {
		public Op_menorContext op_menor() {
			return getRuleContext(Op_menorContext.class,0);
		}
		public Op_mayorContext op_mayor() {
			return getRuleContext(Op_mayorContext.class,0);
		}
		public Op_igualContext op_igual() {
			return getRuleContext(Op_igualContext.class,0);
		}
		public Op_distintoContext op_distinto() {
			return getRuleContext(Op_distintoContext.class,0);
		}
		public ComparacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterComparacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitComparacion(this);
		}
	}

	public final ComparacionContext comparacion() throws RecognitionException {
		ComparacionContext _localctx = new ComparacionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_comparacion);
		try {
			setState(129);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MENOR_QUE:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				op_menor();
				}
				break;
			case MAYOR_QUE:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				op_mayor();
				}
				break;
			case IGUAL_QUE:
				enterOuterAlt(_localctx, 3);
				{
				setState(127);
				op_igual();
				}
				break;
			case DISTINTO_QUE:
				enterOuterAlt(_localctx, 4);
				{
				setState(128);
				op_distinto();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperadorContext extends ParserRuleContext {
		public Op_asignacionContext op_asignacion() {
			return getRuleContext(Op_asignacionContext.class,0);
		}
		public Op_sumaContext op_suma() {
			return getRuleContext(Op_sumaContext.class,0);
		}
		public Condicion_logicaContext condicion_logica() {
			return getRuleContext(Condicion_logicaContext.class,0);
		}
		public ComparacionContext comparacion() {
			return getRuleContext(ComparacionContext.class,0);
		}
		public OperadorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operador; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterOperador(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitOperador(this);
		}
	}

	public final OperadorContext operador() throws RecognitionException {
		OperadorContext _localctx = new OperadorContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_operador);
		try {
			setState(135);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ASIGNACION:
				enterOuterAlt(_localctx, 1);
				{
				setState(131);
				op_asignacion();
				}
				break;
			case SUMA:
				enterOuterAlt(_localctx, 2);
				{
				setState(132);
				op_suma();
				}
				break;
			case TRUE:
			case FALSE:
				enterOuterAlt(_localctx, 3);
				{
				setState(133);
				condicion_logica();
				}
				break;
			case MENOR_QUE:
			case MAYOR_QUE:
			case IGUAL_QUE:
			case DISTINTO_QUE:
				enterOuterAlt(_localctx, 4);
				{
				setState(134);
				comparacion();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumContext extends ParserRuleContext {
		public TerminalNode ENTERO() { return getToken(GParser.ENTERO, 0); }
		public TerminalNode FLOTANTE() { return getToken(GParser.FLOTANTE, 0); }
		public NumContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_num; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterNum(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitNum(this);
		}
	}

	public final NumContext num() throws RecognitionException {
		NumContext _localctx = new NumContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_num);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			_la = _input.LA(1);
			if ( !(_la==ENTERO || _la==FLOTANTE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentificadorContext extends ParserRuleContext {
		public TerminalNode IDENTIFICADOR() { return getToken(GParser.IDENTIFICADOR, 0); }
		public IdentificadorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identificador; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterIdentificador(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitIdentificador(this);
		}
	}

	public final IdentificadorContext identificador() throws RecognitionException {
		IdentificadorContext _localctx = new IdentificadorContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_identificador);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(IDENTIFICADOR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FinContext extends ParserRuleContext {
		public TerminalNode FIN() { return getToken(GParser.FIN, 0); }
		public FinContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fin; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterFin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitFin(this);
		}
	}

	public final FinContext fin() throws RecognitionException {
		FinContext _localctx = new FinContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_fin);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(FIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComaContext extends ParserRuleContext {
		public TerminalNode COMA() { return getToken(GParser.COMA, 0); }
		public ComaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_coma; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterComa(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitComa(this);
		}
	}

	public final ComaContext coma() throws RecognitionException {
		ComaContext _localctx = new ComaContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_coma);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dos_puntosContext extends ParserRuleContext {
		public TerminalNode DOS_PUNTOS() { return getToken(GParser.DOS_PUNTOS, 0); }
		public Dos_puntosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dos_puntos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterDos_puntos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitDos_puntos(this);
		}
	}

